--- a/0.babylonViewer Basic.html
+++ b/0.babylonViewer Basic.html
@@ -8,7 +8,7 @@
 		<script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
 </head>
 <body>
-	<babylon model="./models/0305-3.glb"></babylon>
+	<babylon model="./models/alice.glb"></babylon>
 </body>
 
 </html>
